test/expected/command_line-error.out
struct S; explain unsigned int
                           ^
28: error: declaration expected
